loader/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMA
    DOLLAR

Grammar

Rule 0     S' -> file
Rule 1     file -> blocks
Rule 2     blocks -> blocks block
Rule 3     blocks -> block
Rule 4     block -> dictionary
Rule 5     block -> listblock
Rule 6     block -> statement
Rule 7     block -> hexEdge_items
Rule 8     block -> coordlists
Rule 9     block -> empty
Rule 10    listblock -> WORD LPAREN blocks RPAREN SEMICOLON
Rule 11    coordlists -> coordlists coodlist
Rule 12    coordlists -> coodlist
Rule 13    coodlist -> LPAREN anylist RPAREN
Rule 14    hexEdge_items -> hexEdge_items hexEdge_item
Rule 15    hexEdge_items -> hexEdge_item
Rule 16    hexEdge_item -> hex_item
Rule 17    hexEdge_item -> edge_item
Rule 18    hex_item -> WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
Rule 19    edge_item -> WORD number number gradlist
Rule 20    gradlist -> coodlist
Rule 21    gradlist -> LPAREN coordlists RPAREN
Rule 22    dictionary -> WORD LBRACE blocks RBRACE
Rule 23    statement -> WORD anylist SEMICOLON
Rule 24    anylist -> anylist sitem
Rule 25    anylist -> sitem
Rule 26    sitem -> word
Rule 27    sitem -> number
Rule 28    sitem -> dimension
Rule 29    sitem -> vector
Rule 30    sitem -> empty
Rule 31    word -> WORD
Rule 32    number -> NUMBER
Rule 33    vector -> LPAREN NUMBER NUMBER NUMBER RPAREN
Rule 34    dimension -> LSQUABRAC NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RSQUABRAC
Rule 35    empty -> <empty>

Terminals, with rules where they appear

COMMA                : 
DOLLAR               : 
LBRACE               : 22
LPAREN               : 10 13 18 18 21 33
LSQUABRAC            : 34
NUMBER               : 18 18 18 18 18 18 18 18 18 18 18 32 33 33 33 34 34 34 34 34 34 34
RBRACE               : 22
RPAREN               : 10 13 18 18 21 33
RSQUABRAC            : 34
SEMICOLON            : 10 23
WORD                 : 10 18 19 22 23 31
error                : 

Nonterminals, with rules where they appear

anylist              : 13 23 24
block                : 2 3
blocks               : 1 2 10 22
coodlist             : 11 12 20
coordlists           : 8 11 21
dictionary           : 4
dimension            : 28
edge_item            : 17
empty                : 9 30
file                 : 0
gradlist             : 18 19
hexEdge_item         : 14 15
hexEdge_items        : 7 14
hex_item             : 16
listblock            : 5
number               : 19 19 27
sitem                : 24 25
statement            : 6
vector               : 29
word                 : 18 26

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . blocks
    (2) blocks -> . blocks block
    (3) blocks -> . block
    (4) block -> . dictionary
    (5) block -> . listblock
    (6) block -> . statement
    (7) block -> . hexEdge_items
    (8) block -> . coordlists
    (9) block -> . empty
    (22) dictionary -> . WORD LBRACE blocks RBRACE
    (10) listblock -> . WORD LPAREN blocks RPAREN SEMICOLON
    (23) statement -> . WORD anylist SEMICOLON
    (14) hexEdge_items -> . hexEdge_items hexEdge_item
    (15) hexEdge_items -> . hexEdge_item
    (11) coordlists -> . coordlists coodlist
    (12) coordlists -> . coodlist
    (35) empty -> .
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (13) coodlist -> . LPAREN anylist RPAREN
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    WORD            shift and go to state 10
    $end            reduce using rule 35 (empty -> .)
    LPAREN          shift and go to state 11

  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    file                           shift and go to state 1
    blocks                         shift and go to state 2
    block                          shift and go to state 3
    dictionary                     shift and go to state 4
    listblock                      shift and go to state 5
    statement                      shift and go to state 6
    hexEdge_items                  shift and go to state 7
    coordlists                     shift and go to state 8
    empty                          shift and go to state 9
    hexEdge_item                   shift and go to state 12
    coodlist                       shift and go to state 13
    hex_item                       shift and go to state 14
    edge_item                      shift and go to state 15

state 1

    (0) S' -> file .



state 2

    (1) file -> blocks .
    (2) blocks -> blocks . block
    (4) block -> . dictionary
    (5) block -> . listblock
    (6) block -> . statement
    (7) block -> . hexEdge_items
    (8) block -> . coordlists
    (9) block -> . empty
    (22) dictionary -> . WORD LBRACE blocks RBRACE
    (10) listblock -> . WORD LPAREN blocks RPAREN SEMICOLON
    (23) statement -> . WORD anylist SEMICOLON
    (14) hexEdge_items -> . hexEdge_items hexEdge_item
    (15) hexEdge_items -> . hexEdge_item
    (11) coordlists -> . coordlists coodlist
    (12) coordlists -> . coodlist
    (35) empty -> .
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (13) coodlist -> . LPAREN anylist RPAREN
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for WORD resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (file -> blocks .)
  ! shift/reduce conflict for LPAREN resolved as shift
    $end            reduce using rule 1 (file -> blocks .)
    WORD            shift and go to state 10
    LPAREN          shift and go to state 11

  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]
  ! $end            [ reduce using rule 35 (empty -> .) ]

    block                          shift and go to state 16
    dictionary                     shift and go to state 4
    listblock                      shift and go to state 5
    statement                      shift and go to state 6
    hexEdge_items                  shift and go to state 7
    coordlists                     shift and go to state 8
    empty                          shift and go to state 9
    hexEdge_item                   shift and go to state 12
    coodlist                       shift and go to state 13
    hex_item                       shift and go to state 14
    edge_item                      shift and go to state 15

state 3

    (3) blocks -> block .

    WORD            reduce using rule 3 (blocks -> block .)
    LPAREN          reduce using rule 3 (blocks -> block .)
    $end            reduce using rule 3 (blocks -> block .)
    RBRACE          reduce using rule 3 (blocks -> block .)
    RPAREN          reduce using rule 3 (blocks -> block .)


state 4

    (4) block -> dictionary .

    WORD            reduce using rule 4 (block -> dictionary .)
    LPAREN          reduce using rule 4 (block -> dictionary .)
    $end            reduce using rule 4 (block -> dictionary .)
    RBRACE          reduce using rule 4 (block -> dictionary .)
    RPAREN          reduce using rule 4 (block -> dictionary .)


state 5

    (5) block -> listblock .

    WORD            reduce using rule 5 (block -> listblock .)
    LPAREN          reduce using rule 5 (block -> listblock .)
    $end            reduce using rule 5 (block -> listblock .)
    RBRACE          reduce using rule 5 (block -> listblock .)
    RPAREN          reduce using rule 5 (block -> listblock .)


state 6

    (6) block -> statement .

    WORD            reduce using rule 6 (block -> statement .)
    LPAREN          reduce using rule 6 (block -> statement .)
    $end            reduce using rule 6 (block -> statement .)
    RBRACE          reduce using rule 6 (block -> statement .)
    RPAREN          reduce using rule 6 (block -> statement .)


state 7

    (7) block -> hexEdge_items .
    (14) hexEdge_items -> hexEdge_items . hexEdge_item
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for WORD resolved as shift
    LPAREN          reduce using rule 7 (block -> hexEdge_items .)
    $end            reduce using rule 7 (block -> hexEdge_items .)
    RBRACE          reduce using rule 7 (block -> hexEdge_items .)
    RPAREN          reduce using rule 7 (block -> hexEdge_items .)
    WORD            shift and go to state 18

  ! WORD            [ reduce using rule 7 (block -> hexEdge_items .) ]

    hexEdge_item                   shift and go to state 17
    hex_item                       shift and go to state 14
    edge_item                      shift and go to state 15

state 8

    (8) block -> coordlists .
    (11) coordlists -> coordlists . coodlist
    (13) coodlist -> . LPAREN anylist RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    WORD            reduce using rule 8 (block -> coordlists .)
    $end            reduce using rule 8 (block -> coordlists .)
    RBRACE          reduce using rule 8 (block -> coordlists .)
    RPAREN          reduce using rule 8 (block -> coordlists .)
    LPAREN          shift and go to state 11

  ! LPAREN          [ reduce using rule 8 (block -> coordlists .) ]

    coodlist                       shift and go to state 19

state 9

    (9) block -> empty .

    WORD            reduce using rule 9 (block -> empty .)
    LPAREN          reduce using rule 9 (block -> empty .)
    $end            reduce using rule 9 (block -> empty .)
    RBRACE          reduce using rule 9 (block -> empty .)
    RPAREN          reduce using rule 9 (block -> empty .)


state 10

    (22) dictionary -> WORD . LBRACE blocks RBRACE
    (10) listblock -> WORD . LPAREN blocks RPAREN SEMICOLON
    (23) statement -> WORD . anylist SEMICOLON
    (18) hex_item -> WORD . LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> WORD . number number gradlist
    (24) anylist -> . anylist sitem
    (25) anylist -> . sitem
    (32) number -> . NUMBER
    (26) sitem -> . word
    (27) sitem -> . number
    (28) sitem -> . dimension
    (29) sitem -> . vector
    (30) sitem -> . empty
    (31) word -> . WORD
    (34) dimension -> . LSQUABRAC NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RSQUABRAC
    (33) vector -> . LPAREN NUMBER NUMBER NUMBER RPAREN
    (35) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for LSQUABRAC resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    LBRACE          shift and go to state 21
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 24
    WORD            shift and go to state 20
    LSQUABRAC       shift and go to state 31
    SEMICOLON       reduce using rule 35 (empty -> .)

  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! NUMBER          [ reduce using rule 35 (empty -> .) ]
  ! LSQUABRAC       [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    anylist                        shift and go to state 23
    word                           shift and go to state 25
    number                         shift and go to state 26
    sitem                          shift and go to state 27
    dimension                      shift and go to state 28
    vector                         shift and go to state 29
    empty                          shift and go to state 30

state 11

    (13) coodlist -> LPAREN . anylist RPAREN
    (24) anylist -> . anylist sitem
    (25) anylist -> . sitem
    (26) sitem -> . word
    (27) sitem -> . number
    (28) sitem -> . dimension
    (29) sitem -> . vector
    (30) sitem -> . empty
    (31) word -> . WORD
    (32) number -> . NUMBER
    (34) dimension -> . LSQUABRAC NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RSQUABRAC
    (33) vector -> . LPAREN NUMBER NUMBER NUMBER RPAREN
    (35) empty -> .

  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for LSQUABRAC resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    WORD            shift and go to state 20
    NUMBER          shift and go to state 24
    LSQUABRAC       shift and go to state 31
    LPAREN          shift and go to state 32
    RPAREN          reduce using rule 35 (empty -> .)

  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! NUMBER          [ reduce using rule 35 (empty -> .) ]
  ! LSQUABRAC       [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    anylist                        shift and go to state 33
    sitem                          shift and go to state 27
    word                           shift and go to state 25
    number                         shift and go to state 34
    dimension                      shift and go to state 28
    vector                         shift and go to state 29
    empty                          shift and go to state 30

state 12

    (15) hexEdge_items -> hexEdge_item .

    WORD            reduce using rule 15 (hexEdge_items -> hexEdge_item .)
    LPAREN          reduce using rule 15 (hexEdge_items -> hexEdge_item .)
    $end            reduce using rule 15 (hexEdge_items -> hexEdge_item .)
    RBRACE          reduce using rule 15 (hexEdge_items -> hexEdge_item .)
    RPAREN          reduce using rule 15 (hexEdge_items -> hexEdge_item .)


state 13

    (12) coordlists -> coodlist .

    LPAREN          reduce using rule 12 (coordlists -> coodlist .)
    WORD            reduce using rule 12 (coordlists -> coodlist .)
    $end            reduce using rule 12 (coordlists -> coodlist .)
    RBRACE          reduce using rule 12 (coordlists -> coodlist .)
    RPAREN          reduce using rule 12 (coordlists -> coodlist .)


state 14

    (16) hexEdge_item -> hex_item .

    WORD            reduce using rule 16 (hexEdge_item -> hex_item .)
    LPAREN          reduce using rule 16 (hexEdge_item -> hex_item .)
    $end            reduce using rule 16 (hexEdge_item -> hex_item .)
    RBRACE          reduce using rule 16 (hexEdge_item -> hex_item .)
    RPAREN          reduce using rule 16 (hexEdge_item -> hex_item .)


state 15

    (17) hexEdge_item -> edge_item .

    WORD            reduce using rule 17 (hexEdge_item -> edge_item .)
    LPAREN          reduce using rule 17 (hexEdge_item -> edge_item .)
    $end            reduce using rule 17 (hexEdge_item -> edge_item .)
    RBRACE          reduce using rule 17 (hexEdge_item -> edge_item .)
    RPAREN          reduce using rule 17 (hexEdge_item -> edge_item .)


state 16

    (2) blocks -> blocks block .

    WORD            reduce using rule 2 (blocks -> blocks block .)
    LPAREN          reduce using rule 2 (blocks -> blocks block .)
    $end            reduce using rule 2 (blocks -> blocks block .)
    RBRACE          reduce using rule 2 (blocks -> blocks block .)
    RPAREN          reduce using rule 2 (blocks -> blocks block .)


state 17

    (14) hexEdge_items -> hexEdge_items hexEdge_item .

    WORD            reduce using rule 14 (hexEdge_items -> hexEdge_items hexEdge_item .)
    LPAREN          reduce using rule 14 (hexEdge_items -> hexEdge_items hexEdge_item .)
    $end            reduce using rule 14 (hexEdge_items -> hexEdge_items hexEdge_item .)
    RBRACE          reduce using rule 14 (hexEdge_items -> hexEdge_items hexEdge_item .)
    RPAREN          reduce using rule 14 (hexEdge_items -> hexEdge_items hexEdge_item .)


state 18

    (18) hex_item -> WORD . LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> WORD . number number gradlist
    (32) number -> . NUMBER

    LPAREN          shift and go to state 35
    NUMBER          shift and go to state 24

    number                         shift and go to state 36

state 19

    (11) coordlists -> coordlists coodlist .

    LPAREN          reduce using rule 11 (coordlists -> coordlists coodlist .)
    WORD            reduce using rule 11 (coordlists -> coordlists coodlist .)
    $end            reduce using rule 11 (coordlists -> coordlists coodlist .)
    RBRACE          reduce using rule 11 (coordlists -> coordlists coodlist .)
    RPAREN          reduce using rule 11 (coordlists -> coordlists coodlist .)


state 20

    (31) word -> WORD .

    SEMICOLON       reduce using rule 31 (word -> WORD .)
    WORD            reduce using rule 31 (word -> WORD .)
    NUMBER          reduce using rule 31 (word -> WORD .)
    LSQUABRAC       reduce using rule 31 (word -> WORD .)
    LPAREN          reduce using rule 31 (word -> WORD .)
    RPAREN          reduce using rule 31 (word -> WORD .)


state 21

    (22) dictionary -> WORD LBRACE . blocks RBRACE
    (2) blocks -> . blocks block
    (3) blocks -> . block
    (4) block -> . dictionary
    (5) block -> . listblock
    (6) block -> . statement
    (7) block -> . hexEdge_items
    (8) block -> . coordlists
    (9) block -> . empty
    (22) dictionary -> . WORD LBRACE blocks RBRACE
    (10) listblock -> . WORD LPAREN blocks RPAREN SEMICOLON
    (23) statement -> . WORD anylist SEMICOLON
    (14) hexEdge_items -> . hexEdge_items hexEdge_item
    (15) hexEdge_items -> . hexEdge_item
    (11) coordlists -> . coordlists coodlist
    (12) coordlists -> . coodlist
    (35) empty -> .
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (13) coodlist -> . LPAREN anylist RPAREN
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    WORD            shift and go to state 10
    RBRACE          reduce using rule 35 (empty -> .)
    LPAREN          shift and go to state 11

  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    blocks                         shift and go to state 37
    block                          shift and go to state 3
    dictionary                     shift and go to state 4
    listblock                      shift and go to state 5
    statement                      shift and go to state 6
    hexEdge_items                  shift and go to state 7
    coordlists                     shift and go to state 8
    empty                          shift and go to state 9
    hexEdge_item                   shift and go to state 12
    coodlist                       shift and go to state 13
    hex_item                       shift and go to state 14
    edge_item                      shift and go to state 15

state 22

    (10) listblock -> WORD LPAREN . blocks RPAREN SEMICOLON
    (18) hex_item -> WORD LPAREN . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (33) vector -> LPAREN . NUMBER NUMBER NUMBER RPAREN
    (2) blocks -> . blocks block
    (3) blocks -> . block
    (4) block -> . dictionary
    (5) block -> . listblock
    (6) block -> . statement
    (7) block -> . hexEdge_items
    (8) block -> . coordlists
    (9) block -> . empty
    (22) dictionary -> . WORD LBRACE blocks RBRACE
    (10) listblock -> . WORD LPAREN blocks RPAREN SEMICOLON
    (23) statement -> . WORD anylist SEMICOLON
    (14) hexEdge_items -> . hexEdge_items hexEdge_item
    (15) hexEdge_items -> . hexEdge_item
    (11) coordlists -> . coordlists coodlist
    (12) coordlists -> . coodlist
    (35) empty -> .
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (13) coodlist -> . LPAREN anylist RPAREN
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    NUMBER          shift and go to state 39
    WORD            shift and go to state 10
    RPAREN          reduce using rule 35 (empty -> .)
    LPAREN          shift and go to state 11

  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    blocks                         shift and go to state 38
    block                          shift and go to state 3
    dictionary                     shift and go to state 4
    listblock                      shift and go to state 5
    statement                      shift and go to state 6
    hexEdge_items                  shift and go to state 7
    coordlists                     shift and go to state 8
    empty                          shift and go to state 9
    hexEdge_item                   shift and go to state 12
    coodlist                       shift and go to state 13
    hex_item                       shift and go to state 14
    edge_item                      shift and go to state 15

state 23

    (23) statement -> WORD anylist . SEMICOLON
    (24) anylist -> anylist . sitem
    (26) sitem -> . word
    (27) sitem -> . number
    (28) sitem -> . dimension
    (29) sitem -> . vector
    (30) sitem -> . empty
    (31) word -> . WORD
    (32) number -> . NUMBER
    (34) dimension -> . LSQUABRAC NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RSQUABRAC
    (33) vector -> . LPAREN NUMBER NUMBER NUMBER RPAREN
    (35) empty -> .

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for LSQUABRAC resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    SEMICOLON       shift and go to state 40
    WORD            shift and go to state 20
    NUMBER          shift and go to state 24
    LSQUABRAC       shift and go to state 31
    LPAREN          shift and go to state 32

  ! SEMICOLON       [ reduce using rule 35 (empty -> .) ]
  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! NUMBER          [ reduce using rule 35 (empty -> .) ]
  ! LSQUABRAC       [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    sitem                          shift and go to state 41
    word                           shift and go to state 25
    number                         shift and go to state 34
    dimension                      shift and go to state 28
    vector                         shift and go to state 29
    empty                          shift and go to state 30

state 24

    (32) number -> NUMBER .

    NUMBER          reduce using rule 32 (number -> NUMBER .)
    SEMICOLON       reduce using rule 32 (number -> NUMBER .)
    WORD            reduce using rule 32 (number -> NUMBER .)
    LSQUABRAC       reduce using rule 32 (number -> NUMBER .)
    LPAREN          reduce using rule 32 (number -> NUMBER .)
    RPAREN          reduce using rule 32 (number -> NUMBER .)


state 25

    (26) sitem -> word .

    SEMICOLON       reduce using rule 26 (sitem -> word .)
    WORD            reduce using rule 26 (sitem -> word .)
    NUMBER          reduce using rule 26 (sitem -> word .)
    LSQUABRAC       reduce using rule 26 (sitem -> word .)
    LPAREN          reduce using rule 26 (sitem -> word .)
    RPAREN          reduce using rule 26 (sitem -> word .)


state 26

    (19) edge_item -> WORD number . number gradlist
    (27) sitem -> number .
    (32) number -> . NUMBER

  ! shift/reduce conflict for NUMBER resolved as shift
    SEMICOLON       reduce using rule 27 (sitem -> number .)
    WORD            reduce using rule 27 (sitem -> number .)
    LSQUABRAC       reduce using rule 27 (sitem -> number .)
    LPAREN          reduce using rule 27 (sitem -> number .)
    NUMBER          shift and go to state 24

  ! NUMBER          [ reduce using rule 27 (sitem -> number .) ]

    number                         shift and go to state 42

state 27

    (25) anylist -> sitem .

    SEMICOLON       reduce using rule 25 (anylist -> sitem .)
    WORD            reduce using rule 25 (anylist -> sitem .)
    NUMBER          reduce using rule 25 (anylist -> sitem .)
    LSQUABRAC       reduce using rule 25 (anylist -> sitem .)
    LPAREN          reduce using rule 25 (anylist -> sitem .)
    RPAREN          reduce using rule 25 (anylist -> sitem .)


state 28

    (28) sitem -> dimension .

    SEMICOLON       reduce using rule 28 (sitem -> dimension .)
    WORD            reduce using rule 28 (sitem -> dimension .)
    NUMBER          reduce using rule 28 (sitem -> dimension .)
    LSQUABRAC       reduce using rule 28 (sitem -> dimension .)
    LPAREN          reduce using rule 28 (sitem -> dimension .)
    RPAREN          reduce using rule 28 (sitem -> dimension .)


state 29

    (29) sitem -> vector .

    SEMICOLON       reduce using rule 29 (sitem -> vector .)
    WORD            reduce using rule 29 (sitem -> vector .)
    NUMBER          reduce using rule 29 (sitem -> vector .)
    LSQUABRAC       reduce using rule 29 (sitem -> vector .)
    LPAREN          reduce using rule 29 (sitem -> vector .)
    RPAREN          reduce using rule 29 (sitem -> vector .)


state 30

    (30) sitem -> empty .

    SEMICOLON       reduce using rule 30 (sitem -> empty .)
    WORD            reduce using rule 30 (sitem -> empty .)
    NUMBER          reduce using rule 30 (sitem -> empty .)
    LSQUABRAC       reduce using rule 30 (sitem -> empty .)
    LPAREN          reduce using rule 30 (sitem -> empty .)
    RPAREN          reduce using rule 30 (sitem -> empty .)


state 31

    (34) dimension -> LSQUABRAC . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RSQUABRAC

    NUMBER          shift and go to state 43


state 32

    (33) vector -> LPAREN . NUMBER NUMBER NUMBER RPAREN

    NUMBER          shift and go to state 44


state 33

    (13) coodlist -> LPAREN anylist . RPAREN
    (24) anylist -> anylist . sitem
    (26) sitem -> . word
    (27) sitem -> . number
    (28) sitem -> . dimension
    (29) sitem -> . vector
    (30) sitem -> . empty
    (31) word -> . WORD
    (32) number -> . NUMBER
    (34) dimension -> . LSQUABRAC NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RSQUABRAC
    (33) vector -> . LPAREN NUMBER NUMBER NUMBER RPAREN
    (35) empty -> .

  ! shift/reduce conflict for RPAREN resolved as shift
  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for LSQUABRAC resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    RPAREN          shift and go to state 45
    WORD            shift and go to state 20
    NUMBER          shift and go to state 24
    LSQUABRAC       shift and go to state 31
    LPAREN          shift and go to state 32

  ! RPAREN          [ reduce using rule 35 (empty -> .) ]
  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! NUMBER          [ reduce using rule 35 (empty -> .) ]
  ! LSQUABRAC       [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    sitem                          shift and go to state 41
    word                           shift and go to state 25
    number                         shift and go to state 34
    dimension                      shift and go to state 28
    vector                         shift and go to state 29
    empty                          shift and go to state 30

state 34

    (27) sitem -> number .

    RPAREN          reduce using rule 27 (sitem -> number .)
    WORD            reduce using rule 27 (sitem -> number .)
    NUMBER          reduce using rule 27 (sitem -> number .)
    LSQUABRAC       reduce using rule 27 (sitem -> number .)
    LPAREN          reduce using rule 27 (sitem -> number .)
    SEMICOLON       reduce using rule 27 (sitem -> number .)


state 35

    (18) hex_item -> WORD LPAREN . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist

    NUMBER          shift and go to state 46


state 36

    (19) edge_item -> WORD number . number gradlist
    (32) number -> . NUMBER

    NUMBER          shift and go to state 24

    number                         shift and go to state 42

state 37

    (22) dictionary -> WORD LBRACE blocks . RBRACE
    (2) blocks -> blocks . block
    (4) block -> . dictionary
    (5) block -> . listblock
    (6) block -> . statement
    (7) block -> . hexEdge_items
    (8) block -> . coordlists
    (9) block -> . empty
    (22) dictionary -> . WORD LBRACE blocks RBRACE
    (10) listblock -> . WORD LPAREN blocks RPAREN SEMICOLON
    (23) statement -> . WORD anylist SEMICOLON
    (14) hexEdge_items -> . hexEdge_items hexEdge_item
    (15) hexEdge_items -> . hexEdge_item
    (11) coordlists -> . coordlists coodlist
    (12) coordlists -> . coodlist
    (35) empty -> .
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (13) coodlist -> . LPAREN anylist RPAREN
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for RBRACE resolved as shift
  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    RBRACE          shift and go to state 47
    WORD            shift and go to state 10
    LPAREN          shift and go to state 11

  ! RBRACE          [ reduce using rule 35 (empty -> .) ]
  ! WORD            [ reduce using rule 35 (empty -> .) ]
  ! LPAREN          [ reduce using rule 35 (empty -> .) ]

    block                          shift and go to state 16
    dictionary                     shift and go to state 4
    listblock                      shift and go to state 5
    statement                      shift and go to state 6
    hexEdge_items                  shift and go to state 7
    coordlists                     shift and go to state 8
    empty                          shift and go to state 9
    hexEdge_item                   shift and go to state 12
    coodlist                       shift and go to state 13
    hex_item                       shift and go to state 14
    edge_item                      shift and go to state 15

state 38

    (10) listblock -> WORD LPAREN blocks . RPAREN SEMICOLON
    (2) blocks -> blocks . block
    (4) block -> . dictionary
    (5) block -> . listblock
    (6) block -> . statement
    (7) block -> . hexEdge_items
    (8) block -> . coordlists
    (9) block -> . empty
    (22) dictionary -> . WORD LBRACE blocks RBRACE
    (10) listblock -> . WORD LPAREN blocks RPAREN SEMICOLON
    (23) statement -> . WORD anylist SEMICOLON
    (14) hexEdge_items -> . hexEdge_items hexEdge_item
    (15) hexEdge_items -> . hexEdge_item
    (11) coordlists -> . coordlists coodlist
    (12) coordlists -> . coodlist
    (35) empty -> .
    (16) hexEdge_item -> . hex_item
    (17) hexEdge_item -> . edge_item
    (13) coodlist -> . LPAREN anylist RPAREN
    (18) hex_item -> . WORD LPAREN NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER RPAREN LPAREN NUMBER NUMBER NUMBER RPAREN word gradlist
    (19) edge_item -> . WORD number number gradlist

  ! shift/reduce conflict for RPAREN resolved as shift
  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    RPAREN          shift and go to state 48
    WORD            shift and go to state 10
    LPAREN          shift and go to state 11
